# rustpylib

./: README.md  pybin.py
rustlib/src/: lib.rs
rustpylib/: Cargo.toml  pyproject.toml
rustpylib/src/: lib.rs
