[package]
name = "rustpylib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustpylib"
crate-type = ["cdylib"]

[dependencies]
# https://www.maturin.rs/tutorial#create-a-new-rust-project
pyo3 = { version = "0.22.0", features = ["abi3-py38"] }
rustlib = { path = "../rustlib" }
